@@ -10,17 +10,17 @@
     <name>Browserstack template</name>
 
     <properties>
-        <driver>firefox</driver>
+        <driver>chrome</driver>
         <remote.type>browserstack</remote.type>
         <domain>https://jdi-testing.github.io/jdi-light/</domain>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <USERNAME>kirillpoltorykhi_D3ILCJ</USERNAME>
+        <ACCESS_KEY>KJpfnFzGy7rM64zpmueU</ACCESS_KEY>
+        <aspectj.args></aspectj.args>
         <aspectj.version>1.9.20</aspectj.version>
         <allure.testng>2.23.0</allure.testng>
         <allure.maven>2.12.0</allure.maven>
         <jetty.version>9.4.12.RC2</jetty.version>
-        <jdi.version>LATEST</jdi.version>
-        <USERNAME/>
-        <ACCESS_KEY/>
     </properties>
 
     <profiles>
@@ -33,6 +33,15 @@
                 <remote.type>selenoid</remote.type>
             </properties>
         </profile>
+        <profile>
+            <id>jdk16</id>
+            <activation>
+                <jdk>[16, 20]</jdk>
+            </activation>
+            <properties>
+                <aspectj.args>--add-opens java.base/java.lang=ALL-UNNAMED</aspectj.args>
+            </properties>
+        </profile>
     </profiles>
 
     <dependencies>
@@ -40,7 +49,7 @@
         <dependency>
             <groupId>com.epam.jdi</groupId>
             <artifactId>jdi-light-html</artifactId>
-            <version>${jdi.version}</version>
+            <version>LATEST</version>
         </dependency>
 
         <!--Allure-->
@@ -49,6 +58,7 @@
             <artifactId>allure-testng</artifactId>
             <version>${allure.testng}</version>
         </dependency>
+
     </dependencies>
 
     <build>
@@ -71,7 +81,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
+                <version>3.0.0-M7</version>
                 <configuration>
                     <systemPropertyVariables>
                         <allure.results.directory>${project.build.directory}/allure-results</allure.results.directory>
@@ -80,6 +90,7 @@
                         <suiteXmlFile>src/test/resources/general.xml</suiteXmlFile>
                     </suiteXmlFiles>
                     <argLine>
+                        ${aspectj.args}
                         -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                     </argLine>
                     <environmentVariables>
